--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. we bring forth a deep passion for problem-solving.</p>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
             
